--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-
+/* 
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -76,7 +76,7 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -123,4 +123,19 @@ a {
 
 html {
   scroll-behavior: smooth;
+}
+
+.portfolio-slider-container {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  padding-bottom: 20px;
+  margin-bottom: -20px;
+  overflow: hidden;
+}
+
+.portfolio-slide {
+  flex: 0 0 100%;
+  scroll-snap-align: start;
 }
